# simh

./: .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_STANDARDS.md  README-CMake.md  TODO.md  vcpkg.json
.github/workflows/: build.yml
cmake/: .gitignore  CMake-Maintainers.md  CMake-Simulator-Maintainers.md  FindPCAP.cmake  FindPCRE2.cmake  FindPTW.cmake  FindVDE.cmake  GitHub-release.md  add_simulator.cmake  c-dialect.cmake  cmake-builder.ps1  cmake-builder.sh  cpack-setup.cmake  dep-link.cmake  dep-locate.cmake  dependency-report.cmake  libslirp-target.cmake  os-features.cmake  platform-quirks.cmake  pthreads-dep.cmake  simh-dependencies.cmake  simh-extra-tools.cmake  uuid-dep.cmake  vcpkg-setup.cmake  vcpkg-triplet.cmake  windows-api-target.cmake
cmake/tests/: dependency-report-test.cmake  find-pcap-test.cmake  vcpkg-triplet-test.cmake  windows-api-target-test.cmake
docs/developers/: adding_io_devices.md  breakpoints.md  writing_a_simulator.md
docs/manual/: faq.md  simulators.md  users_guide.md
projects/: ALLOC_FAILURES.md  ASYNC_IDENTIFIER_RENAME.md  BOOL_CONVERSION.md  COMMAND_TABLE_ARGUMENT_TYPING.md  DISPLAY_BACKENDS.md  ECLIPSE_FPU.md  I650_TEST_ARTIFACT_ISOLATION.md  IBM1130_UTILITIES_CMAKE.md  INTTYPES_PRINTF_FORMATS.md  MUSASHI_VENDOR_UPDATE.md  NUMERIC_QUANTITY_PARSING.md  PRINTF_FORMAT_AUDIT.md  RANDOM.md  SAVE_RESTORE_ATTACHMENT_HOOKS.md  SIM_IO_PRIMITIVES_AUDIT.md  SIM_NOINLINE.md  SLIRP.md  STDINT.md  VAX_HEADERS.md  VAX_WORD_TYPES.md
simulators/3B2/: 3b2_cpu.c  3b2_cpu.h  3b2_ctc.c  3b2_ctc.h  3b2_defs.h  3b2_dmac.c  3b2_dmac.h  3b2_id.c  3b2_id.h  3b2_if.c  3b2_if.h  3b2_io.c  3b2_io.h  3b2_iu.c  3b2_iu.h  3b2_mau.c  3b2_mau.h  3b2_mem.c  3b2_mem.h  3b2_ni.c  3b2_ni.h  3b2_ports.c  3b2_ports.h  3b2_rev2_csr.c  3b2_rev2_csr.h  3b2_rev2_mmu.c  3b2_rev2_mmu.h  3b2_rev3_csr.c  3b2_rev3_csr.h  3b2_rev3_mmu.c  3b2_rev3_mmu.h  3b2_scsi.c  3b2_scsi.h  3b2_scsi_internal.h  3b2_stddev.c  3b2_stddev.h  3b2_sys.c  3b2_sys.h  3b2_timer.c  3b2_timer.h
simulators/ALTAIR/: altair_cpu.c  altair_defs.h  altair_dsk.c  altair_dsk_internal.h  altair_sio.c  altair_sys.c
simulators/AltairZ80/: CMakeLists.txt  altairz80_cpu.c  altairz80_cpu_nommu.c  altairz80_defs.h  altairz80_dsk.c  altairz80_hdsk.c  altairz80_mhdsk.c  altairz80_net.c  altairz80_sio.c  altairz80_sys.c  disasm.c  flashwriter2.c  i8272.c  i8272.h  i86.h  i86_decode.c  i86_ops.c  i86_prim_ops.c  ibc.c  ibc_mcc_hdc.c  ibc_smd_hdc.c  m68kasm.y  m68kconf_zimh.h  m68ksim.c  m68ksim.h  mfdc.c  mfdc.h  mmd.c  n8vem.c  nasm.h  s100_2sio.c  s100_64fdc.c  s100_adcs6.c  s100_dazzler.c  s100_disk1a.c  s100_disk2.c  s100_disk3.c  s100_dj2d.c  s100_djhdc.c  s100_fif.c  (+22 more)
simulators/B5500/: b5500_cpu.c  b5500_defs.h  b5500_dk.c  b5500_dr.c  b5500_dtc.c  b5500_io.c  b5500_mt.c  b5500_sys.c  b5500_urec.c
simulators/BESM6/: besm6_arith.c  besm6_arith_internal.h  besm6_cpu.c  besm6_defs.h  besm6_disk.c  besm6_drum.c  besm6_mg.c  besm6_mmu.c  besm6_panel.c  besm6_pl.c  besm6_printer.c  besm6_punch.c  besm6_punchcard.c  besm6_sys.c  besm6_tty.c  besm6_vu.c
simulators/CDC1700/: cdc1700_cd.c  cdc1700_cpu.c  cdc1700_dc.c  cdc1700_defs.h  cdc1700_dev1.c  cdc1700_dis.c  cdc1700_dp.c  cdc1700_drm.c  cdc1700_io.c  cdc1700_iofw.c  cdc1700_lp.c  cdc1700_msos5.c  cdc1700_mt.c  cdc1700_rtc.c  cdc1700_sym.c  cdc1700_sys.c
simulators/GRI/: gri_cpu.c  gri_defs.h  gri_stddev.c  gri_sys.c
simulators/H316/: h316_cpu.c  h316_defs.h  h316_dp.c  h316_fhd.c  h316_hi.c  h316_hi_internal.h  h316_imp.c  h316_imp.h  h316_lp.c  h316_mi.c  h316_mt.c  h316_rtc.c  h316_stddev.c  h316_sys.c  h316_udp.c
simulators/HP2100/: CMakeLists.txt  hp2100_baci.c  hp2100_cpu.c  hp2100_cpu.h  hp2100_cpu0.c  hp2100_cpu1.c  hp2100_cpu2.c  hp2100_cpu3.c  hp2100_cpu4.c  hp2100_cpu5.c  hp2100_cpu6.c  hp2100_cpu7.c  hp2100_cpu_dmm.h  hp2100_cpu_fp.c  hp2100_cpu_fp.h  hp2100_cpu_fpp.c  hp2100_defs.h  hp2100_di.c  hp2100_di.h  hp2100_di_da.c  hp2100_disclib.c  hp2100_disclib.h  hp2100_dma.c  hp2100_dp.c  hp2100_dq.c  hp2100_dr.c  hp2100_ds.c  hp2100_format.c  hp2100_format.h  hp2100_io.h  hp2100_ipl.c  hp2100_lps.c  hp2100_lpt.c  hp2100_mc.c  hp2100_mem.c  hp2100_mpx.c  hp2100_ms.c  hp2100_mt.c  hp2100_mux.c  hp2100_pif.c  (+4 more)
simulators/HP3000/: CMakeLists.txt  hp3000_atc.c  hp3000_clk.c  hp3000_cpu.c  hp3000_cpu.h  hp3000_cpu_base.c  hp3000_cpu_cis.c  hp3000_cpu_fp.c  (+20 more)
simulators/Ibm1130/utils/: CMakeLists.txt  asm1130.c  bindump.c  checkdisk.c  disklist.c  diskview.c  mkboot.c  punches.c  util_io.c  util_io.h  viewdeck.c
tests/unit/simulators/ALTAIR/: CMakeLists.txt  test_altair_dsk.c  test_altair_sys.c
tests/unit/simulators/AltairZ80/: CMakeLists.txt  test_altairz80_sys.c  test_disasm.c  test_flashwriter2_attach.c  test_ibc_smd_hdc.c  test_m68k_zimh_conf.c  test_m68ksim_callbacks.c  test_s100_dazzler.c  test_s100_scp300f.c
tests/unit/simulators/VAX/: CMakeLists.txt  test_vax43_sysdev_behavior.c  test_vax440_sysdev_behavior.c  test_vax4xx_dz.c  test_vax4xx_rz94.c  test_vax4xx_stddev.c  test_vax4xx_stddev_behavior.c  test_vax4xx_sysdev_behavior.c  test_vax750_mem.c  test_vax780_fload.c  test_vax820_boot.c  test_vax820_stddev_timer.c  test_vax820_uba_interrupts.c  test_vax_cpu1_call.c  test_vax_kdb50.c  test_vax_mscp.c  test_vax_qbus.c  test_vax_qbus_io_read.c  test_vax_qbus_io_write.c  test_vax_qbus_mem_write.c  test_vax_rom_byte_write_behavior.c  test_vax_symbols.c  test_vax_sysdev.c  test_vax_sysdev_behavior.c  test_vax_uw.c  test_vax_va_dma.c  test_vax_va_dma_behavior.c  test_vax_xs.c
tests/unit/src/core/: CMakeLists.txt  cmdvars_env_helper.c  test_scp_bitfield.c  test_scp_breakpoint.c  test_scp_cmdvars.c  test_scp_context.c  test_scp_debug.c  test_scp_expect.c  test_scp_expr.c  test_scp_format.c  test_scp_help_engine.c  test_scp_input.c  test_scp_message.c  test_scp_parse.c  test_scp_regex.c  test_scp_register.c  test_scp_size.c  test_scp_unit.c  test_sim_printf_fmts.c
tests/unit/support/: CMakeLists.txt  test_scp_expect_fixture.c  test_scp_fixture.c  test_scp_fixture.h  test_simh_personality.c  test_support.c  test_support.h
(+1021 files in other folders)
